opam-version: "1.2"
name: "mirage-nat-hashtable"
version: "0.6.0"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
homepage: "https://github.com/yomimono/mirage-nat"
bug-reports: "https://github.com/yomimono/mirage-nat/issues/"
dev-repo: "https://github.com/yomimono/mirage-nat.git"
license: "ISC"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "ipaddr"
  "cstruct"
  "mirage-profile"
  "lwt"
  "lru"
  "mirage-nat"
  "ppx_deriving" {build & >= "4.2" }
  "jbuilder" {build}
  "tcpip" { >= "3.0.0" }
  "alcotest" {test}
  "mirage-clock-unix" {test}
]
