opam-version: "1.2"
name: "mirage-nat"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
homepage: "https://github.com/mirage/mirage-nat"
bug-reports: "https://github.com/mirage/mirage-nat/issues/"
dev-repo: "https://github.com/mirage/mirage-nat.git"
doc: "https://mirage.github.io/mirage-nat/"
license: "ISC"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ipaddr"
  "cstruct"
  "mirage-time-lwt"
  "mirage-clock-lwt"
  "lwt"
  "rresult"
  "logs"
  "lru"
  "ppx_deriving" {build & >= "4.2" }
  "dune" {build & >= "1.0"}
  "tcpip" { >= "3.7.0" }
  "ethernet" { >= "2.0.0" }
  "arp"
  "alcotest" {test}
  "mirage-clock-unix" {test}
]
