opam-version: "2.0"
name: "mirage-nat"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
homepage: "https://github.com/mirage/mirage-nat"
bug-reports: "https://github.com/mirage/mirage-nat/issues/"
dev-repo: "git+https://github.com/mirage/mirage-nat.git"
doc: "https://mirage.github.io/mirage-nat/"
license: "ISC"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "ipaddr"
  "cstruct" {>= "6.0.0"}
  "lru" {>= "0.3.0"}
  "ppx_deriving" {>= "4.2" }
  "dune" {>= "1.0"}
  "tcpip" { >= "7.0.0" }
  "ethernet" { >= "3.0.0" }
  "alcotest" {with-test}
  "mirage-clock-unix" {with-test}
  "fmt" {with-test & >= "0.8.7"}
  "lwt" {with-test}
  "logs" {with-test}
]
conflicts: [ "result" {< "1.5"} ]
synopsis: "Mirage-nat is a library for network address translation to be used with MirageOS"
description: """
Mirage-nat is a library for [network address
translation](https://tools.ietf.org/html/rfc2663).  It is intended for use in
[MirageOS](https://mirage.io) and makes extensive use of
[tcpip](https://github.com/mirage/mirage-tcpip), the network stack used by
default in MirageOS unikernels.
"""
